feat: Adjust script path and improve level loading
Updates the script source path in `index.html` to `./index.tsx` for better compatibility with GitHub Pages.

Enhances level loading in `App.tsx` by implementing a try-catch block for `localStorage` operations, providing more robust error handling and a fallback for initial level data. The logic for generating initial levels remains consistent.

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <!-- تم تغيير المسار من /index.tsx إلى ./index.tsx لدعم GitHub Pages -->
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
