--- a/index.html
+++ b/index.html
@@ -38,12 +38,6 @@
         background: radial-gradient(circle, transparent 40%, rgba(0,0,0,0.3) 100%);
         z-index: 5;
       }
-      .bg-floor {
-        background: linear-gradient(to top, #166534 0%, transparent 40%);
-        bottom: 0;
-        height: 100%;
-        z-index: 1;
-      }
       .no-scrollbar::-webkit-scrollbar { display: none; }
       .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
 
@@ -62,17 +56,18 @@
   <script type="importmap">
 {
   "imports": {
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "@google/genai": "https://esm.sh/@google/genai@^1.35.0"
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/": "https://esm.sh/react-dom@19.0.0/",
+    "react": "https://esm.sh/react@19.0.0",
+    "react/": "https://esm.sh/react@19.0.0/",
+    "@google/genai": "https://esm.sh/@google/genai@1.3.0"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
-    <!-- تم تغيير المسار من /index.tsx إلى ./index.tsx لدعم GitHub Pages -->
-    <script type="module" src="./index.tsx"></script>
+    <!-- استخدام المسار المباشر لضمان عمله في بيئة الـ Build -->
+    <script type="module" src="index.tsx"></script>
   </body>
 </html>
